Muestra la fecha de última edición

--- a/src/main/resources/web/vcard.html
+++ b/src/main/resources/web/vcard.html
@@ -40,5 +40,10 @@
 
 	</main>
 
+	<div class="height-footer"></div>
+	
+	<footer class="footer height-footer">
+		##LAST_EDITION##
+	</footer>
 </body>
 </html>
