Margen con el footer

--- a/src/main/resources/web/vcard.html
+++ b/src/main/resources/web/vcard.html
@@ -42,7 +42,7 @@
 
 	<div class="height-footer"></div>
 	
-	<footer class="footer height-footer">
+	<footer class="footer">
 		##LAST_EDITION##
 	</footer>
 </body>
