Mostrar nombre y apellidos en la información del contacto

--- a/src/main/resources/web/vcard.html
+++ b/src/main/resources/web/vcard.html
@@ -25,6 +25,8 @@
 			</div>
 			<div class="col-sm-8">
 				<h2>##FULL_NAME##</h2>
+				<h6 class="name">##NAME##</h6>
+				<h6 class="name">##SURNAME##</h6>
 				##BIRTHDAY##
 				<blockquote class="blockquote">##NOTES##</blockquote>
 				##GROUP_CATEGORY##
