Nueva interfaz web en columnas

--- a/src/main/resources/web/vcard.html
+++ b/src/main/resources/web/vcard.html
@@ -34,11 +34,19 @@
 		</div>
 	</div>
 	
-	##GROUP_PHONE##
-
-	##GROUP_EMAIL##
-
-	##GROUP_ADDRESS##
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-4">
+				##GROUP_PHONE##
+			</div>
+			<div class="col-sm-4">
+				##GROUP_EMAIL##
+			</div>
+			<div class="col-sm-4">
+				##GROUP_ADDRESS##
+			</div>
+		</div>
+	</div>
 
 	</main>
 
