--- a/src/main/resources/web/vcard_section_address.html
+++ b/src/main/resources/web/vcard_section_address.html
@@ -1,11 +1,7 @@
-							<li class="list-group-item">
-								<div class="row">
-									<div class="col-sm-3 text-right">
-										<span class="badge badge-danger">##ADDRESS_TYPE##</span>
-									</div>
-									<div class="col-sm-6">
-										<address>##ADDRESS##</address>
-									</div>
-									<div class="col-sm-3">##ADDRESS_TEXT##</div>
-								</div>
-							</li>
+				<div class="card info">
+					<div class="card-body">
+						<h5 class="card-title"> <span class="badge badge-danger">##ADDRESS_TYPE##</span> </h5>
+						<h6 class="card-subtitle mb-2 text-muted">##ADDRESS_TEXT##</h6>
+						<p class="card-text">##ADDRESS##</p>
+					</div>
+				</div>
