--- a/src/main/resources/web/vcard_section_email.html
+++ b/src/main/resources/web/vcard_section_email.html
@@ -1,9 +1,7 @@
-							<li class="list-group-item">
-								<div class="row">
-									<div class="col-sm-3 text-right">
-										<span class="badge badge-danger">##EMAIL_TYPE##</span>
-									</div>
-									<div class="col-sm-6">##EMAIL##</div>
-									<div class="col-sm-3">##EMAIL_TEXT##</div>
-								</div>
-							</li>
+				<div class="card info">
+					<div class="card-body">
+						<h5 class="card-title"> <span class="badge badge-danger">##EMAIL_TYPE##</span> </h5>
+						<h6 class="card-subtitle mb-2 text-muted">##EMAIL_TEXT##</h6>
+						<p class="card-text">##EMAIL##</p>
+					</div>
+				</div>
