Mostrar apodo en la ficha de contacto

--- a/src/main/resources/web/vcard.html
+++ b/src/main/resources/web/vcard.html
@@ -25,6 +25,7 @@
 			</div>
 			<div class="col-sm-8">
 				<h2>##FULL_NAME##</h2>
+				<h5 class="name">##NICKNAME##</h5>
 				<h6 class="name">##NAME##</h6>
 				<h6 class="name">##SURNAME##</h6>
 				##BIRTHDAY##
